--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row mb-5">
           <div class="col-md-7">
             <h2 class="heading">book contents</h2>
-            <p>Buku edukatif dan interaktif yang dirancang untuk mengenali, menyalurkan, dan meregulasi emosi</p>
+            <p>Buku edukatif dan interaktif yang dirancang untuk mengenali, menyalurkan, dan meregulasi emosi.</p>
           </div>
         </div>
         <div class="row">
@@ -201,7 +201,7 @@
   <div class="text">
     <h2 class="heading">About The book</h2>
     <h3>Ruang Rasa by Emospire Flow</h3>
-        <p>Buku Ruang Rasa terdiri dari berbagai aktivitas yang dapat membantu Anda mengekspresikan dan meregulasi emosi dengan baik, yang terbagi ke dalam enam bab emosi. Keenam emosi tersebut adalah senang, cinta, marah, sedih, cemas, dan takut. Buku Ruang Rasa juga dilengkapi lembar rekap emosi yang bisa bermanfaat untuk melihat frekuensi terhadap suatu emosi yang dirasakan selama penggunaan buku Ruang Rasa ini. Aktivitas yang dapat dilakukan adalah journaling, menggambar, mewarnai, dan lain-lain.</p>
+        <p>Buku Ruang Rasa terdiri dari berbagai aktivitas yang dapat membantu kamu mengekspresikan dan meregulasi emosi dengan baik, yang terbagi ke dalam enam bab emosi. Keenam emosi tersebut adalah senang, cinta, marah, sedih, cemas, dan takut. Buku Ruang Rasa juga dilengkapi lembar rekap emosi yang bisa bermanfaat untuk melihat frekuensi terhadap suatu emosi yang dirasakan selama penggunaan buku Ruang Rasa ini. Aktivitas yang dapat dilakukan adalah journaling, menggambar, mewarnai, dan lain-lain.</p>
       </div>
     </div>
 
