--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="row">
           <div class="col-md-6 mb-5">
             <h1 class="text-black serif text-uppercase mb-4">Ruang Rasa</h1>
-            <p class="text-black mb-5">Adanya permasalahan pada orang-orang di masa dewasa awal yang sulit untuk mengekspresikan dan meregulasi emosi adalah hal yang melatarbelakangi terciptanya buku ini. Emosi yang tidak diregulasi dengan baik dapat memunculkan masalah yang lebih serius di masa depan. Maka dari itu, Kami menawarkan solusi di mana kamu dapat menjadi lebih menyadari emosimu, dapat mengekspresikan emosi yang sedang dirasakan, dan cara meregulasi emosi dengan baik melalui aktivitas-aktivitas yang tersedia dalam buku ini.</p>
+            <p class="text-black mb-5">Adanya permasalahan pada orang-orang di masa dewasa awal yang sulit untuk mengekspresikan dan meregulasi emosi adalah hal yang melatarbelakangi terciptanya buku ini. Emosi yang tidak diregulasi dengan baik dapat memunculkan masalah yang lebih serius di masa depan. Maka dari itu, kami menawarkan solusi di mana kamu dapat menjadi lebih menyadari, mengekspresikan, dan meregulasi emosi dengan baik melalui aktivitas-aktivitas yang tersedia dalam buku ini.</p>
             <p>
               <a href="https://www.instagram.com/emospireflow.id/" class="btn-solid-blue">Click Here</a>
             </p>
@@ -201,7 +201,7 @@
   <div class="text">
     <h2 class="heading">About The book</h2>
     <h3>Ruang Rasa by Emospire Flow</h3>
-        <p>Buku Ruang Rasa terdiri dari berbagai aktivitas yang dapat membantu kamu mengekspresikan dan meregulasi emosi dengan baik, yang terbagi ke dalam enam bab emosi. Keenam emosi tersebut adalah senang, cinta, marah, sedih, cemas, dan takut. Buku Ruang Rasa juga dilengkapi lembar rekap emosi yang bisa bermanfaat untuk melihat frekuensi terhadap suatu emosi yang dirasakan selama penggunaan buku Ruang Rasa ini. Aktivitas yang dapat dilakukan adalah journaling, menggambar, mewarnai, dan lain-lain.</p>
+        <p>Buku Ruang Rasa terdiri dari berbagai aktivitas yang dapat membantu kamu mengekspresikan dan meregulasi emosi dengan baik, yang terbagi ke dalam enam bab emosi. Keenam emosi tersebut adalah senang, cinta, marah, sedih, cemas, dan takut. Buku Ruang Rasa juga dilengkapi lembar rekap emosi yang bisa bermanfaat untuk melihat frekuensi terhadap suatu emosi yang dirasakan selama penggunaan buku Ruang Rasa ini. Aktivitas yang dapat dilakukan adalah journaling, menggambar, mewarnai, dan masih banyak aktivitas lainnya.</p>
       </div>
     </div>
 
